@@ -1,3 +1,8 @@
+2010-03-25  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/43517
+	* gfortran.dg/read_eof_7.f90: New test.
+
 2010-03-25  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
